--- a/index.html
+++ b/index.html
@@ -3,187 +3,65 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VIP Agency</title>
+  <title>TikTok API - VIP Agency</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
       font-family: Arial, sans-serif;
-      background: #111; /* background hitam */
+      background: #111;
       color: white;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
       min-height: 100vh;
-      padding: 20px;
+      margin: 0;
     }
-
-    .container {
-      max-width: 520px;
-      width: 100%;
-      text-align: center;
-      flex: 1;
-    }
-
     .profile {
-      margin-bottom: 20px;
+      text-align: center;
     }
-
     .profile img {
       width: 120px;
       height: 120px;
       border-radius: 50%;
-      border: 3px solid rgb(250, 250, 250);
-      object-fit: cover;
+      border: 3px solid gold;
     }
-
     .profile h1 {
-      margin-top: 10px;
-      font-size: 1.8rem;
+      margin: 10px 0;
+      font-size: 1.5rem;
     }
-
-    /* Kotak statistik */
-    .stats-wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: stretch;
-      margin-bottom: 25px;
-      border-radius: 15px;
-      overflow: hidden;
-      box-shadow: 0 0 15px rgba(255, 215, 0, 0.6);
-    }
-
-    .stats {
-      flex: 0 0 50%; /* selalu 2 kolom */
-      max-width: 50%;
-      background: linear-gradient(135deg, #FFD700, #FFA500);
-      color: #111;
-      padding: 20px 10px;
-      font-size: 1.1rem;
-      font-weight: bold;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
-    }
-
-    .stats + .stats {
-      border-left: 2px solid rgba(0,0,0,0.2); /* garis pemisah */
-    }
-
-    .stats span {
-      font-size: 1.3rem;
-      color: #000;
-    }
-
-    .stats .icon {
-      font-size: 1.4rem;
-    }
-
-    .links {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      margin-bottom: 40px;
-    }
-
-    .link-item {
-      background: yellow;
-      color: #111;
-      padding: 15px;
-      border-radius: 10px;
-      font-size: 1.1rem;
-      font-weight: bold;
-      text-decoration: none;
-      transition: 0.3s;
-    }
-
-    .link-item:hover {
-      background: #ffcc00;
-      transform: scale(1.05);
-    }
-
-    footer {
-      text-align: center;
-      font-size: 0.9rem;
-      color: #aaa;
-      margin-top: auto;
-      padding: 15px 0;
-    }
-
-    footer a {
-      color: yellow;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
-    }
-
-    /* Responsive */
-    @media (max-width: 600px) {
-      .profile h1 {
-        font-size: 1.5rem;
-      }
-      .link-item {
-        font-size: 1rem;
-        padding: 12px;
-      }
-      .stats {
-        font-size: 1rem;
-        padding: 15px 5px;
-      }
-      .stats span {
-        font-size: 1.1rem;
-      }
+    .profile p {
+      color: #ccc;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="profile">
-      <img src="images/vip.png" alt="Profile">
-      <h1>VIP_Agency</h1>
-      <p>@vip_agency</p>
-    </div>
-
-    <!-- Dua menu statistik sejajar -->
-    <div class="stats-wrapper">
-      <div class="stats">
-        <div class="icon">🎵</div>
-        <div>Kreator: <span id="jumlahKreator">311+</span></div>
-      </div>
-      <div class="stats">
-        <div class="icon">🏆</div>
-        <div>Sub Agency: <span id="jumlahSub">17+</span></div>
-      </div>
-    </div>
-
-    <div class="links">
-      <a href="https://www.tiktok.com/link/v2?aid=1988&lang=en&scene=bio_url&target=https%3A%2F%2Fwww.tiktok.com%2Ft%2FZMhhYfPCA%2F" class="link-item" target="_blank">Gabung Agency</a>
-      <a href="https://logovip.netlify.app/" class="link-item" target="_blank">Logo VIP Agency</a>
-      <a href="https://bannerpkvip.netlify.app/" class="link-item" target="_blank">Banner PK VIP Agency</a>
-      <a href="https://vt.tiktok.com/ZSHW2bpqedEyd-1CfsJ/" class="link-item" target="_blank">Tutorial Tiktok</a>
-      <a href="https://www.tiktok.com/@vip_agency" class="link-item" target="_blank">Akun TikTok</a>
-      <a href="https://vipagency.netlify.app/" class="link-item" target="_blank">Website</a>
-      <a href="https://wa.me/6285333630997" class="link-item" target="_blank">Admin PK</a>
-    </div>
+  <div class="profile">
+    <img id="avatar" src="" alt="Avatar">
+    <h1 id="displayName">Loading...</h1>
+    <p id="openId"></p>
   </div>
 
-  <footer>
-    <p>© 2025 VIP_Agency | Dibuat oleh <a href="https://vipagency.netlify.app/" target="_blank">❤️ Dafid SEO</a></p>
-  </footer>
-
   <script>
-    const jumlah = document.getElementById('jumlahKreator');
-    const sub = document.getElementById('jumlahSub');
-    console.log("Jumlah kreator:", jumlah.textContent, "| Sub Agency:", sub.textContent);
+    async function loadTikTok() {
+      try {
+        const res = await fetch("/.netlify/functions/tiktok");
+        const json = await res.json();
+        console.log(json);
+
+        const user = json.data?.user;
+
+        if (user) {
+          document.getElementById("avatar").src = user.avatar_url;
+          document.getElementById("displayName").textContent = user.display_name;
+          document.getElementById("openId").textContent = `Open ID: ${user.open_id}`;
+        } else {
+          document.getElementById("displayName").textContent = "Gagal ambil data!";
+        }
+      } catch (e) {
+        document.getElementById("displayName").textContent = "Error: " + e.message;
+      }
+    }
+    loadTikTok();
   </script>
 </body>
 </html>
