--- a/index.html
+++ b/index.html
@@ -1,52 +1,56 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VIP Agency TikTok</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>VIP Agency</title>
+<style>
+* { margin:0; padding:0; box-sizing:border-box; }
+body { font-family:Arial,sans-serif; background:#111; color:white; display:flex; flex-direction:column; align-items:center; min-height:100vh; padding:20px;}
+.container { max-width:520px; width:100%; text-align:center; }
+.profile { margin-bottom:20px; }
+.profile img { width:120px; height:120px; border-radius:50%; border:3px solid #FFD700; object-fit:cover; }
+.profile h1 { margin-top:10px; font-size:1.8rem; }
+.profile p { color:#ccc; }
+.links { display:flex; flex-direction:column; gap:15px; margin-bottom:40px; }
+.link-item { background:yellow; color:#111; padding:15px; border-radius:10px; font-size:1.1rem; font-weight:bold; text-decoration:none; transition:0.3s; }
+.link-item:hover { background:#ffcc00; transform:scale(1.05); }
+footer { text-align:center; font-size:0.9rem; color:#aaa; margin-top:auto; padding:15px 0; }
+footer a { color:yellow; text-decoration:none; font-weight:bold; }
+footer a:hover { text-decoration:underline; }
+.stats-wrapper { display:grid; grid-template-columns:repeat(2,1fr); gap:15px; margin-bottom:25px; }
+.stats { background:linear-gradient(135deg,#FFD700,#FFA500); color:#111; padding:15px; border-radius:15px; font-weight:bold; display:flex; align-items:center; justify-content:center; gap:8px; }
+.stats span { font-size:1.3rem; color:#000; }
+.stats .icon { font-size:1.4rem; }
+@media (max-width:600px){ .profile h1{font-size:1.5rem;} .link-item{font-size:1rem;padding:12px;} .stats{font-size:1rem;padding:12px;} .stats span{font-size:1.1rem;} }
+</style>
 </head>
 <body>
-  <div class="container">
-    <h1>VIP Agency TikTok</h1>
-    <button id="loginBtn">Login dengan TikTok</button>
-
-    <div id="profile" class="hidden">
-      <img id="avatar" src="" alt="Avatar">
-      <h2 id="name"></h2>
-      <p><strong>OpenID:</strong> <span id="openId"></span></p>
-    </div>
+<div class="container">
+  <div class="profile">
+    <img src="images/vip.png" alt="Profile">
+    <h1>VIP_Agency</h1>
+    <p>@vip_agency</p>
   </div>
 
-  <script>
-    const loginBtn = document.getElementById("loginBtn");
-    const profileDiv = document.getElementById("profile");
+  <div class="links">
+    <a href="https://www.tiktok.com/link/v2?aid=1988" class="link-item" target="_blank">Gabung Agency</a>
+    <a href="https://logovip.netlify.app/" class="link-item" target="_blank">Logo VIP Agency</a>
+    <a href="https://bannerpkvip.netlify.app/" class="link-item" target="_blank">Banner PK VIP Agency</a>
+    <a href="https://www.tiktok.com/@vip_agency" class="link-item" target="_blank">Akun TikTok</a>
+    <a href="https://vipagency.netlify.app/" class="link-item" target="_blank">Website</a>
+    <a href="https://wa.me/6285333630997" class="link-item" target="_blank">Admin PK</a>
+  </div>
 
-    loginBtn.addEventListener("click", () => {
-      // Redirect ke auth function (OAuth TikTok)
-      window.location.href = "/.netlify/functions/auth";
-    });
+  <div class="stats-wrapper">
+    <div class="stats"><div class="icon">🎵</div><div>Kreator: <span id="jumlahKreator">311+</span></div></div>
+    <div class="stats"><div class="icon">🏆</div><div>Sub Agency: <span id="jumlahSub">17+</span></div></div>
+  </div>
+</div>
 
-    // Jika ada token di URL hash, panggil function untuk ambil data user
-    async function getUserData() {
-      try {
-        const res = await fetch("/.netlify/functions/tiktok");
-        const data = await res.json();
-        if (data.user) {
-          document.getElementById("avatar").src = data.user.avatar_url;
-          document.getElementById("name").textContent = data.user.display_name;
-          document.getElementById("openId").textContent = data.user.open_id;
-          profileDiv.classList.remove("hidden");
-          loginBtn.style.display = "none";
-        } else {
-          console.log("Belum login:", data);
-        }
-      } catch (err) {
-        console.error("Gagal ambil data:", err);
-      }
-    }
+<footer>
+<p>© 2025 VIP_Agency | Dibuat oleh <a href="https://vipagency.netlify.app/" target="_blank">❤️ Dafid SEO</a></p>
+</footer>
 
-    getUserData();
-  </script>
 </body>
 </html>
