--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ footer a:hover { text-decoration:underline; }
   </div>
 
   <div class="links">
-    <a href="https://www.tiktok.com/link/v2?aid=1988" class="link-item" target="_blank">Gabung Agency</a>
+    <a href="https://www.tiktok.com/t/ZMhhYfPCA/" class="link-item" target="_blank">Gabung Agency</a>
     <a href="https://logovip.netlify.app/" class="link-item" target="_blank">Logo VIP Agency</a>
     <a href="https://bannerpkvip.netlify.app/" class="link-item" target="_blank">Banner PK VIP Agency</a>
     <a href="https://www.tiktok.com/@vip_agency" class="link-item" target="_blank">Akun TikTok</a>
