--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ footer a:hover { text-decoration:underline; }
 .stats .icon { font-size:1.4rem; }
 @media (max-width:600px){ .profile h1{font-size:1.5rem;} .link-item{font-size:1rem;padding:12px;} .stats{font-size:1rem;padding:12px;} .stats span{font-size:1.1rem;} }
 </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1125396389768801"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="container">
