--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>VIP Agency</title>
+  <meta name="google-adsense-account" content="ca-pub-1125396389768801">
 <style>
 * { margin:0; padding:0; box-sizing:border-box; }
 body { font-family:Arial,sans-serif; background:#111; color:white; display:flex; flex-direction:column; align-items:center; min-height:100vh; padding:20px;}
