--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>VIP Agency</title>
-  <meta name="google-adsense-account" content="ca-pub-1125396389768801">
 <style>
 * { margin:0; padding:0; box-sizing:border-box; }
 body { font-family:Arial,sans-serif; background:#111; color:white; display:flex; flex-direction:column; align-items:center; min-height:100vh; padding:20px;}
@@ -25,8 +24,6 @@ footer a:hover { text-decoration:underline; }
 .stats .icon { font-size:1.4rem; }
 @media (max-width:600px){ .profile h1{font-size:1.5rem;} .link-item{font-size:1rem;padding:12px;} .stats{font-size:1rem;padding:12px;} .stats span{font-size:1.1rem;} }
 </style>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1125396389768801"
-     crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="container">
@@ -38,18 +35,15 @@ footer a:hover { text-decoration:underline; }
 
   <div class="links">
     <a href="https://www.tiktok.com/t/ZMhhYfPCA/" class="link-item" target="_blank">Gabung Agency</a>
+    <a href="https://wa.me/6282164889300" class="link-item" target="_blank">Chat Admin</a>
+    <a href="https://wa.me/6282164889300" class="link-item" target="_blank">Sub Agency</a>
+    <a href="https://vipagency.netlify.app/" class="link-item" target="_blank">Website</a>
+    <a href="https://pemulavip.netlify.app/" class="link-item" target="_blank">Panduan Tiktok</a>
     <a href="https://logovip.netlify.app/" class="link-item" target="_blank">Logo VIP Agency</a>
     <a href="https://bannerpkvip.netlify.app/" class="link-item" target="_blank">Banner PK VIP Agency</a>
     <a href="https://www.tiktok.com/@vip_agency" class="link-item" target="_blank">Akun TikTok</a>
-    <a href="https://vipagency.netlify.app/" class="link-item" target="_blank">Website</a>
     <a href="https://wa.me/6285333630997" class="link-item" target="_blank">Admin PK</a>
   </div>
-
-  <div class="stats-wrapper">
-    <div class="stats"><div class="icon">🎵</div><div>Kreator: <span id="jumlahKreator">311+</span></div></div>
-    <div class="stats"><div class="icon">🏆</div><div>Sub Agency: <span id="jumlahSub">17+</span></div></div>
-  </div>
-</div>
 
 <footer>
 <p>© 2025 VIP_Agency | Dibuat oleh <a href="https://vipagency.netlify.app/" target="_blank">❤️ Dafid SEO</a></p>
