--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ footer a:hover { text-decoration:underline; }
   </div>
 
   <div class="links">
-    <a href="https://www.tiktok.com/t/ZMhhYfPCA/" class="link-item" target="_blank">Gabung Agency</a>
+    <a href="https://www.tiktok.com/t/ZMhhYfPCA/" class="link-item" target="_blank">Daftar Agency</a>
     <a href="https://wa.me/6282164889300" class="link-item" target="_blank">Chat Admin</a>
     <a href="https://wa.me/6282164889300" class="link-item" target="_blank">Sub Agency</a>
     <a href="https://vipagency.netlify.app/" class="link-item" target="_blank">Website</a>
