--- a/index.html
+++ b/index.html
@@ -26,6 +26,27 @@ footer a:hover { text-decoration:underline; }
 </style>
 </head>
 <body>
+<!-- Kode Iklan -->
+<div style="position: absolute; z-index: 99999">
+  <input autocomplete="off" type="checkbox" id="aadsstickymgwy5e1y" hidden />
+  <div style="padding-top: auto; padding-bottom: 0;">
+    <div style="width:100%;height:auto;position:fixed;text-align:center;font-size:0;top:0;left:0;right:0;margin:auto">
+      <label for="aadsstickymgwy5e1y" style="top: 50%;transform: translateY(-50%);right:24px;; position: absolute;border-radius: 4px; background: rgba(248, 248, 249, 0.70); padding: 4px;z-index: 99999;cursor:pointer">
+        <svg fill="#000000" height="16px" width="16px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 490 490">
+          <polygon points="456.851,0 245,212.564 33.149,0 0.708,32.337 212.669,245.004 0.708,457.678 33.149,490 245,277.443 456.851,490 489.292,457.678 277.331,245.004 489.292,32.337 "/>
+        </svg>
+      </label>
+      <div id="frame" style="width: 100%;margin: auto;position: relative; z-index: 99998;"><iframe data-aa=2414187 src=//acceptable.a-ads.com/2414187/?size=Adaptive style='border:0; padding:0; width:70%; height:auto; overflow:hidden; margin: auto'></iframe></div>
+    </div>
+    <style>
+      #aadsstickymgwy5e1y:checked + div {
+        display: none;
+      }
+    </style>
+  </div>
+</div>
+
+<!-- Konten VIP Agency -->
 <div class="container">
   <div class="profile">
     <img src="images/vip.png" alt="Profile">
@@ -48,9 +69,10 @@ footer a:hover { text-decoration:underline; }
     <a href="https://wa.me/6285333630997" class="link-item" target="_blank">Admin PK</a>
   </div>
 
-<footer>
-<p>© 2025 VIP_Agency | Dibuat oleh <a href="https://vipagency.netlify.app/" target="_blank">❤️ Dafid SEO</a></p>
-</footer>
+  <footer>
+    <p>© 2025 VIP_Agency | Dibuat oleh <a href="https://vipagency.netlify.app/" target="_blank">❤️ Dafid SEO</a></p>
+  </footer>
+</div>
 
 </body>
 </html>
